@startuml

class Etablissement {

    -nom:string
    -slug:string
    -description:string
    -telephone:string
    -adresse:string
    -email:string
    -image:string
    -actif:bool
    -accueil:bool
    -createdAt :DATETIME
    -updateAt :DATETIME

}

class Ville {
    -nom : string
    -codePostal : string
    -département :string
    -numeroDepartement : string
    -region :string
}

class Categorie{
    -nom :string
    -createdAt:DATETIME
}
class User {
    prenom : string
    nom : string
    pseudo : string
    email : string
    password : string
    createdAt : DATETIME
    updateAt : DATETIME
    role : string
    actif : boolean
}

Ville "1..1"-- "0..*" Etablissement
Categorie "1..*"--"0..*" Etablissement
User "0..*" -- "0..*"Etablissement

@endum